[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "satellite-sdk"
version = "0.1.0"
description = "Python client SDK for the Satellite sync protocol"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.25.0",
  "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
