[package]
name = "satellite-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust/WASM client SDK for the Satellite sync protocol"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = ["reqwest"]
wasm = ["web-sys", "js-sys", "wasm-bindgen", "wasm-bindgen-futures", "gloo-net"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
async-trait = "0.1"

# Native HTTP client
reqwest = { version = "0.12", features = ["json"], optional = true }

# WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["Headers", "Request", "RequestInit", "Response", "Window", "Crypto", "SubtleCrypto"], optional = true }
gloo-net = { version = "0.6", optional = true }

# Encryption (works in both native and WASM)
aes-gcm = "0.10"
hkdf = "0.12"
rand = "0.8"
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
