[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "satellite-server"
version = "0.1.0"
description = "Python server for the Satellite sync protocol"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.100",
  "pydantic>=2.0",
  "cryptography>=41.0",
  "uvicorn>=0.20",
  "httpx>=0.25.0",
]

[project.optional-dependencies]
s3 = ["aiobotocore>=2.5.0"]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "respx>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
